--- a/The_Notebook.ipynb
+++ b/The_Notebook.ipynb
@@ -107,7 +107,7 @@
       ],
       "source": [
         "load_dotenv()\n",
-        "api_key = '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'\n",
+        "api_key = 'keshav api key, please proceed with replacing with your personal api key'\n",
         "print(\"OpenAI API key is set up.\")\n",
         "print(api_key)"
       ]
